public_website/static/css/style.css
/* ======== GENERAL STYLES ======== */

body {
    font-family: 'Noto Sans', sans-serif;
}

body.grey-background {
    background-color: #f2f2f2;;
}

.sawaliram-container {
    padding-top: calc(60px + 1rem);
    padding-bottom: 4rem;
}

@media (max-width: 576px) {
    .sawaliram-container {
        margin-top: calc(35px + 1rem);
        padding-left: 0;
        padding-right: 0;
    }
}

@media (min-width: 768px) {
    .sawaliram-container {
        max-width: 100%;
        padding-left: 0;
        padding-right: 0;
        min-height: 50vh;
    }
}

.narrow-container {
    margin: auto;
}

@media (min-width: 768px) {
    .narrow-container {
        max-width: 65%;
    }
}

@media (min-width: 1200px) {
    .narrow-container {
        max-width: 55%;
    }
}

.wider-container {
    max-width: 100%;
}

::-moz-selection { /* For Firefox */
    color: #000000;
    background: #FFBA4B;
}

::selection {
    color: #000000;
    background: #FFBA4B;
}

a:hover {
    text-decoration: none;
}

textarea,
input[type=text], 
input[type=password], 
input[type=email] {
    display: block;
    width: 100%;
    border: 1px solid #cacaca;
    border-radius: 20px;
    padding: 8px 15px;
    margin-bottom: 1rem;
}

/* plain input styles (so they look the same as rendered content) */

.input-plain {
    font-size: inherit;
    font-style: inherit;
    font-family: inherit;
    font-weight: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0;
}

input.input-plain {
    border: 0;
    margin-bottom: 0;
    padding: 0;
    margin: 0;
}

select.input-plain {
    border: none;
    background: inherit;
    display: inline-block;
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
    width: auto;
    color: inherit;
}

.input-group > .custom-select,
.input-group .form-control
{
    display: flex;
    justify-content: center;
    height: inherit;
    align-items: center;
    margin: 0;
}

textarea.input-plain {
    border: none;
    margin: unset;
    padding: unset;
}

textarea {
    border-radius: 5px;
}

.text-primary {
    color: #87B24D !important;
}

.text-secondary {
    color: #9B63A8 !important;
}

.badge-primary {
    background-color: #87B24D;
}

.btn {
    display: inline-block;
    width: unset;
    border-radius: 20px;
    padding: 0.4rem 1.3rem;
    background-color: #ffffff;
}

@media (max-width: 576px) {
    .btn {
        padding: 0.3rem 1.1rem;
        font-size: 0.8rem;
    }
}

.btn:disabled,
.btn:disabled:hover {
    background-color: #d0d0d0;
    color: #777;
    border-color: #b9b9b9;
    cursor: not-allowed;
}

.btn-primary {
    background-color: #87B24D;
    border-color: #87B24D;
    color: #FFFFFF;
}

.btn-primary:hover {
    background-color: #759a42;
    border-color: #759a42;
}

.btn-primary-hollow {
    color: #87B24D;
    background-color: #ffffff;
    border: 1px solid #87B24D;
}

.btn-primary-hollow:hover {
    color: #ffffff;
    background-color: #87B24D;
}

.btn-secondary {
    background-color: #9B63A8;
    border-color: #9B63A8;
}

.btn-secondary:hover {
    background-color: #83538e;
    border-color: #83538e;
}

.btn-secondary-hollow {
    color: #9B63A8;
    background-color: #fff0;
    border: 1px solid #9B63A8;
}

.btn-secondary-hollow:hover {
    color: #ffffff;
    background-color: #9B63A8;
}

.btn-yellow {
    color: #000;
    background-color: #FEB740;
}

.btn-yellow:hover {
    color: #000;
    background-color: #FEB740;
}

.btn-danger {
    background-color: #C60000;
    border-color: #C60000;
}

.btn-danger:hover {
    background-color: #A40000;
    border-color: #A40000;
}

.btn-danger-hollow {
    color: #C60000;
    background-color: #ffffff;
    border: 1px solid #C60000;
}

.btn-danger-hollow:hover {
    color: #ffffff;
    background-color: #C60000;
}

.btn-inline {
    text-decoration: underline;
    background: none;
    margin: 0;
    padding: 0;
    border: none;
    border-radius: 0;
}

.btn-inline:hover {
    text-decoration: none;
}

.btn-small {
    padding: 0.3rem 1rem;
    font-size: 0.8rem;
}

.link-secondary {
    color: #9B63A8
}

.link-secondary:hover {
    color: #83538e;
}

.darken {
    position: fixed;
    display: block;
    background: rgba(0,0,0,0.5);
    z-index: 1031;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.slow-transition {
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -ms-transition: all 0.5s;
    -o-transition: all 0.5s;
    transition: all 0.5s;
}

.dropdown .dropdown-menu {
    min-width: 100%;
    border-color: #dadada;
    /* box-shadow: 0 3px 5px 1px rgba(0,0,0,.14); */
    top: 120%;
}

.dropdown .dropdown-menu .dropdown-item {
    cursor: pointer;
}

.inline-block {
    display: inline-block;
}

.flex {
    display: flex;
}

/* ---- Tabs ---- */

.nav.nav-pills .nav-link {
    color: #696969;
    border-radius: 0;
    background-color: #ffffff00;
}

@media (max-width: 576px) {
    .nav.nav-pills .nav-link {
        font-size: 0.8rem;
    }
}

.nav.nav-pills .nav-link:hover {
    background-color: #e2e2e2;
}

.nav.nav-pills .nav-link.active {
    color: #87B24D;
    border-bottom: 2px solid;
}

.nav.nav-pills .nav-link.active:hover {
    background-color: #87b24d26;
}

.tab-content {
    padding-top: 2rem;
    min-height: 15rem;
}

/* ---- Separator ---- */

.hr-under::after {
    display: block;
    border-bottom: 1px solid lightgray;
    margin-top: 0.5rem;
    content: "";
}

.hr-over::before {
    display: block;
    border-top: 1px solid lightgray;
    margin-bottom: 0.5rem;
    content: "";
}

@media (max-width: 576px) {
    .tab-content {
        padding-top: 1rem;
    }
}

.tab-content .tab-content-subheading {
    font-size: 1rem;
}

/* ======== NAVBAR ======== */

.navbar {
    background-color: #FFFFFF;
}

@media (max-width: 576px) {
    .navbar {
        padding: 0.4rem;
    }
}
/* ... */

